# fightstick

./: Cargo.toml  Makefile  README.md  atmega32u4.json  build.rs  descriptor.h  hal.h  helper.c  layout.h  main.c  matrix.c  rust-toolchain.toml  simulator.c  usb.c  usb.h
.cargo/: config.toml
src/: inputs.rs  libc.rs  main.rs  usb.rs  usb_sys.rs
